Move Jade to dependencies

--- a/public/index.html
+++ b/public/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Hello</title>
+	<title>You should...</title>
 	<link rel="stylesheet" href="main.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	<div class="vcent"></div>
 	<div class="messageContainer">
-		<div class="ushld">You should</div>
-		<div class="message">stop</div>
+		<p>Created by rileyjshaw</p>
 	</div>
 	<script src='main.js'></script>
 </body>
