Add and style a submit button

--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>You should...</title>
+	<title>ushld</title>
 	<link rel="stylesheet" href="main.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:700' rel='stylesheet' type='text/css'>
 </head>
@@ -15,8 +15,8 @@
 			<p>should do</p>
 		</div>
 		<form action="/messages" method="post">
-			<input type="text" id="input" name="message">
-			<input type="submit">
+			<input type="text" id="input" name="message"
+			><button type="submit">Go</button>
 		</form>
 	</div>
 	<script src='main.js'></script>
