Turn off autocomplete and autocapitalize for input

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 			<p>should do</p>
 		</div>
 		<form action="/messages" method="post">
-			<input type="text" id="input" name="message"
+			<input type="text" id="input" name="message" autocomplete="off" autocapitalize="off"
 			><button type="submit">Go</button>
 		</form>
 	</div>
